--- a/styles.css
+++ b/styles.css
@@ -17,15 +17,15 @@ footer {
 }
 
 .w {
-  background-image: url("/images/crash.png");
+  background-image: url("./crash.png");
 }
 
 .a {
-  background-image: url("/images/kick.png");
+  background-image: url("/kick.png");
 }
 
 .s {
-  background-image: url("/images/snare.png")
+  background-image: url("./images/snare.png")
 }
 
 .d {
