--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ footer {
   background-image: url("./images/snare.png")
 }
 
-.d {
+/* .d {
   background-image: url("/images/tom1.png");
 }
 
@@ -42,7 +42,7 @@ footer {
 
 .l {
   background-image: url("/images/tom4.png");
-}
+} */
 
 .set {
   margin: 10% auto;
