--- a/styles.css
+++ b/styles.css
@@ -25,11 +25,11 @@ footer {
 }
 
 .s {
-  background-image: url("./drum-kit/images/snare.png")
+  background-image: url("../drum-kit/images/snare.png")
 }
 
  .d {
-  background-image: url("./images/tom1.png");
+  background-image: url("../images/tom1.png");
 }
 
 /*
