--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ footer {
 }
 
 .s {
-  background-image: url("../drum-kit/images/snare.png")
+  background-image: url("../images/snare.png")
 }
 
  .d {
@@ -34,15 +34,15 @@ footer {
 
 /*
 .j {
-  background-image: url("/images/tom2.png");
+  background-image: url("../images/tom2.png");
 }
 
 .k {
-  background-image: url("/images/tom3.png");
+  background-image: url("../images/tom3.png");
 }
 
 .l {
-  background-image: url("/images/tom4.png");
+  background-image: url("../images/tom4.png");
 } */
 
 .set {
