--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,6 @@ footer {
   background-image: url("../images/tom1.png");
 }
 
-/*
 .j {
   background-image: url("../images/tom2.png");
 }
@@ -43,7 +42,7 @@ footer {
 
 .l {
   background-image: url("../images/tom4.png");
-} */
+} 
 
 .set {
   margin: 10% auto;
