--- a/styles.css
+++ b/styles.css
@@ -29,19 +29,19 @@ footer {
 }
 
  .d {
-  background-image: url("../images/tom1.png");
+  background-image: url("../drum-kit/images/tom1.png");
 }
 
 .j {
-  background-image: url("../images/tom2.png");
+  background-image: url("./images/tom2.png");
 }
 
 .k {
-  background-image: url("../images/tom3.png");
+  background-image: url("../tom3.png");
 }
 
 .l {
-  background-image: url("../images/tom4.png");
+  background-image: url("..fil-felipe/drum-kit/images/tom4.png");
 } 
 
 .set {
